--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
     "nodemon": "^2.0.7"
