--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.10.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   }
 }
